Update readme and changelog